# pandora

./: .gitignore  package.json
.github/workflows/: actions-deploy.yml  agent-deploy.yml  agent-test.yml  manifests-deploy.yml
infra/: actions.yml  agent.yml  config.yml  database.yml  dbpvc.yaml
services/actions/: .dockerignore  pyproject.toml
services/actions/src/: main.py
services/actions/src/libs/agent/: types.py
services/actions/src/libs/spacy/: nlp.py  types.py
services/actions/src/tasks/cache/: router.py
services/actions/src/tasks/embeddings/: router.py
services/actions/src/tasks/extraction/: keywords.py  router.py
services/actions/src/tasks/health/: router.py
services/actions/src/tasks/ranking/: router.py  textrank.py
services/actions/src/tasks/similarity/: cosine.py  router.py
services/actions/src/tasks/summarization/: extractive.py  router.py
services/actions/src/utils/: text.py
services/agent/: .dockerignore  .eslintrc  Dockerfile  package-lock.json  package.json  tsconfig.json
services/agent/prisma/: schema.prisma
services/agent/src/: automateNotion.ts  main.ts  notionSyncWorker.ts  server.ts  serverWorker.ts  syncFromNotion.ts  syncNotion.ts  syncReadwise.ts
services/agent/src/documents/: base.ts  block.ts  comment.ts  database.ts  page.ts
services/agent/src/libs/: limiter.ts  notion.ts  rateLimiter.ts  sentry.ts
services/agent/src/server/: index.ts
services/agent/src/strategies/: BlockStrategies.ts  CommentStrategies.ts  DatabaseStrategies.ts  PageStrategies.ts  Strategy.ts  (+2 more)
services/agent/types/: global.d.ts
(+54 files in other folders)
