[tool.poetry]
name = "actions"
version = "0.1.0"
description = ""
authors = ["Isaac Aderogba <isaacaderogba1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sklearn = "^0.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
spacy = "^3.4.1"

[tool.poetry.dependencies.en_core_web_md]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.4.1/en_core_web_md-3.4.1.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
